@@ -1,5 +1,6 @@
 3.1.0 2013-??-??
 ========
+ * disassembler now working again (fail since 3.0)
  * adds support for PHP_5_5
  * compatible with fcntl fork
 
